# gen_server_virtual_time

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  CAF_GENERATOR.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_SETUP_COMPLETE.md  CODE_GENERATORS_COMPLETE.md  COMPLETE.md  CONTRIBUTING.md  DEMO_STATUS.md  DSL_SIMULATOR_STATUS.md  EVERYTHING_COMPLETE.md  FEATURE_SUMMARY.md  GENSERVER_CALLBACKS.md  GITHUB_PAGES_SETUP.md  HEX_PUBLISHING_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OMNETPP_CI_SUMMARY.md  OMNETPP_GENERATOR.md  PROJECT_COMPLETE.md  PUBLISHING.md  RACTOR_COMPLETE.md  README.md  SESSION_SUMMARY.md  VERIFICATION_COMPLETE.md  coveralls.json  mix.exs  test_debug.exs
.github/: README.md  pull_request_template.md
benchmarks/: README.md  virtual_clock_core_benchmarks.exs
caf_pipeline_generated/: main.cpp  sink_callbacks.hpp  sink_callbacks_impl.cpp  source_callbacks.hpp  stage1_actor.hpp  stage2_actor.hpp  stage2_callbacks.hpp  test_actors.cpp
doc/: .build  index.html
docs/: COMPLETED.md  DOCUMENTATION_OPTIMIZATION_PLAN.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  GENERATORS_COMPLETE.md  MISSION_ACCOMPLISHED.md  README.md  WORK_COMPLETE.md  caf_generation.md  caf_generator.md  flowchart_reports.md  four_generators_complete.md  generators.md  generators_ready.md  implementation_summary.md  index.md  local_clock_injection_feature.md  omnetpp_generation.md  omnetpp_generator.md  phony_generator.md  pony_generator.md  ractor_generator.md  session_complete.md  virtual_clock_design.md  vlingo_generator.md
examples/: advanced_demo.exs  caf_demo.exs  clock_modes_demo.exs  demo.exs  dining_philosophers_demo.exs  omnetpp_demo.exs  ractor_demo.exs  single_file_caf.exs  single_file_omnetpp.exs  single_file_phony.exs  single_file_pony.exs  single_file_ractor.exs  single_file_vlingo.exs  termination_demo.exs
examples/caf_burst/: CMakeLists.txt  README.md  atoms.hpp  burst_generator_actor.cpp  burst_generator_actor.hpp  burst_generator_callbacks.hpp  burst_generator_callbacks_impl.cpp  main.cpp  processor_actor.cpp  processor_actor.hpp  processor_callbacks.hpp  processor_callbacks_impl.cpp  test_actors.cpp
examples/caf_loadbalanced/: CMakeLists.txt  README.md  atoms.hpp  conanfile.txt  database_actor.cpp  database_actor.hpp  database_callbacks.hpp  database_callbacks_impl.cpp  load_balancer_actor.cpp  load_balancer_actor.hpp  load_balancer_callbacks.hpp  load_balancer_callbacks_impl.cpp  main.cpp  server1_actor.cpp  server1_actor.hpp  server1_callbacks.hpp  server1_callbacks_impl.cpp  server2_actor.cpp  server2_actor.hpp  server2_callbacks.hpp  server2_callbacks_impl.cpp  server3_actor.cpp  server3_actor.hpp  server3_callbacks.hpp  server3_callbacks_impl.cpp  test_actors.cpp
examples/caf_loadbalanced/.github/workflows/: ci.yml
examples/caf_pipeline/: CMakeLists.txt  README.md  atoms.hpp  main.cpp  sink_actor.cpp  sink_actor.hpp  sink_callbacks_impl.cpp  source_actor.cpp  source_actor.hpp  source_callbacks_impl.cpp  stage1_actor.cpp  stage1_actor.hpp  stage1_callbacks.hpp  stage1_callbacks_impl.cpp  stage2_actor.cpp  stage2_actor.hpp  stage2_callbacks_impl.cpp  stage3_actor.cpp  stage3_actor.hpp  stage3_callbacks.hpp  stage3_callbacks_impl.cpp  test_actors.cpp
examples/caf_pipeline/.github/workflows/: ci.yml
examples/caf_pubsub/: CMakeLists.txt  README.md  atoms.hpp  conanfile.txt  main.cpp  publisher_actor.cpp  publisher_actor.hpp  publisher_callbacks.hpp  publisher_callbacks_impl.cpp  subscriber1_actor.cpp  subscriber1_actor.hpp  subscriber1_callbacks.hpp  subscriber1_callbacks_impl.cpp  subscriber2_actor.cpp  subscriber2_actor.hpp  subscriber2_callbacks.hpp  subscriber2_callbacks_impl.cpp  subscriber3_actor.cpp  subscriber3_actor.hpp  subscriber3_callbacks.hpp  subscriber3_callbacks_impl.cpp  test_actors.cpp
examples/caf_pubsub/.github/workflows/: ci.yml
examples/omnetpp_burst/: BurstGenerator.cc  BurstGenerator.h  BurstNetwork.ned  CMakeLists.txt  Processor.cc  Processor.h  README.md  conanfile.txt  omnetpp.ini
examples/omnetpp_burst/.github/workflows/: ci.yml
examples/omnetpp_loadbalanced/: CMakeLists.txt  Database.cc  Database.h  LoadBalancedSystem.ned  LoadBalancer.cc  LoadBalancer.h  README.md  Server1.cc  Server1.h  Server2.cc  Server2.h  Server3.cc  Server3.h  omnetpp.ini
examples/omnetpp_pipeline/: CMakeLists.txt  PipelineNetwork.ned  README.md  Sink.cc  Sink.h  Source.cc  Source.h  Stage1.cc  Stage1.h  Stage2.cc  Stage2.h  Stage3.cc  Stage3.h  omnetpp.ini
examples/omnetpp_pubsub/: CMakeLists.txt  PubSubNetwork.ned  Publisher.cc  Publisher.h  README.md  Subscriber1.cc  Subscriber1.h  Subscriber2.cc  Subscriber2.h  Subscriber3.cc  Subscriber3.h  omnetpp.ini
examples/omnetpp_pubsub/.github/workflows/: ci.yml
lib/: actor_simulation.ex  dining_philosophers.ex  gen_server_virtual_time.ex  time_backend.ex  virtual_clock.ex  virtual_time_gen_server.ex  virtual_time_gen_state_machine.ex
omnetpp_pubsub_generated/: Publisher.h  Subscriber2.h  Subscriber3.cc  Subscriber3.h
phony_burst_generated/: actor_test.go
pony_loadbalanced_generated/: database_callbacks.pony  load_balancer.pony  load_balancer_callbacks.pony  main.pony  server2_callbacks.pony
scripts/: README.md  act_omnetpp_high_freq.sh  bump_version.sh  century_backup_demo.exs  coverage_combined.sh  generate_caf_examples.exs  generate_omnetpp_examples.exs  generate_phony_examples.exs  generate_pony_examples.exs  generate_vlingo_sample.exs  new-example-docs-placeholder.sh  new-generator-docs-placeholder.sh  prepare_release.sh  quick_race_check.exs  race_condition_check.exs  tag_and_push_version.sh  tag_release.sh  test_caf_demo.sh  test_omnetpp_demo.sh  test_omnetpp_high_freq.sh  test_phony_demo.sh  test_pony_demo.sh  test_ractor_demo.sh  validate_caf_output.exs  validate_omnetpp_output.exs  validate_pony_output.exs
test/: actor_simulation_test.exs  caf_generator_test.exs  definition_test.exs  diagram_generation_test.exs  dining_philosophers_test.exs  documentation_test.exs  gen_server_virtual_time_test.exs  generator_utils_test.exs  genserver_call_timeout_test.exs  genserver_callbacks_test.exs  (+28 more)
(+321 files in other folders)
